minor tweaks to EasyBuild v4.2.1 release notes

--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -3,7 +3,7 @@ For more detailed information, please see the git log.
 
 These release notes can also be consulted at http://easybuild.readthedocs.org/en/latest/Release_notes.html.
 
-The latest version of easybuild-easyconfig provides 9,898 easyconfig files, for 1,978 different software packages,
+The latest version of easybuild-easyconfig provides 9,894 easyconfig files, for 1,978 different software packages,
 incl. 31 different (compiler) toolchains.
 
 v4.2.1 (May 20th 2020)
@@ -11,77 +11,77 @@ v4.2.1 (May 20th 2020)
 
 update/bugfix release
 
+- added easyconfigs for new common toolchains: foss/2020a (#10483, #10492), intel/2020a (#10494)
 - added example easyconfig files for 66 new software packages:
-  - Alpha (#9994), Arlequin (#10620), AutoMap (#10419), antiSMASH (#10589), artic-ncov2019 (#10459), augur (#10405),
-    Bio-EUtilities (#10037), CaSpER (#10593), CoCoALib (#10429), cdbfasta (#10547), cddlib (#10429),
-    DoubletFinder (#10603), dftd3-lib (#10351), E-ANTIC (#10429), FIX (#8870), FastViromeExplorer (#10571),
-    FusionCatcher (#10134), geopandas (#10322), goalign (#10469), gotree (#10459), gretl (#10413), HDF-EOS (#10534),
-    HDF-EOS5 (#10536), HMMER2 (#10588), HyPo (#10642), harmony (#10604), king (#10365), libdeflate (#10459),
-    libfabric (#10616), libgit2 (#10453), libuv (#10444), MDAnalysis (#10545), MEM (#10605), MESS (#10597),
-    MinCED (#10037), MitoZ (#7735), mbuffer (#10524), metaerg (#10037), NLMpy (#10029), NTL (#10431), nauty (#10429),
-    nifti2dicom (#10598), ntCard (#10502), ProtHint (#10549), PyVCF (#10564), PyWavelets (#10501), pIRS (#10508),
-    popscle (#10550), protozero (#10495), pysndfx (#10452), RNA-Bloom (#10502), rampart (#10459), rickflow (#10641),
-    root_numpy (#10424), rstudio (#10619), SDSL (#10642), SHAP (#10379), SNPomatic (#10524), ScaFaCoS (#10537),
-    Scythe (#10524), SoX (#10452), swissknife (#10037),) TCLAP (#10598), Taiyaki (#10573), torchaudio (#10516),
-    wtdbg2 (#10524)
+  - Alpha (#9994), antiSMASH (#10589), Arlequin (#10620), artic-ncov2019 (#10459), augur (#10405), AutoMap (#10419), 
+    Bio-EUtilities (#10037), CaSpER (#10593), cdbfasta (#10547), cddlib (#10429), CoCoALib (#10429)
+    dftd3-lib (#10351), DoubletFinder (#10603), E-ANTIC (#10429), FastViromeExplorer (#10571), FIX (#8870),
+    FusionCatcher (#10134), geopandas (#10322), goalign (#10469), gotree (#10459), gretl (#10413), harmony (#10604),
+    HDF-EOS (#10534), HDF-EOS5 (#10536), HMMER2 (#10588), HyPo (#10642), king (#10365), libdeflate (#10459),
+    libfabric (#10616), libgit2 (#10453), libuv (#10444), mbuffer (#10524), MDAnalysis (#10545), MEM (#10605),
+    MESS (#10597), metaerg (#10037), MinCED (#10037), MitoZ (#7735), nauty (#10429), nifti2dicom (#10598),
+    NLMpy (#10029), ntCard (#10502), NTL (#10431), pIRS (#10508), popscle (#10550), ProtHint (#10549),
+    protozero (#10495), pysndfx (#10452), PyVCF (#10564), PyWavelets (#10501), rampart (#10459), rickflow (#10641),
+    RNA-Bloom (#10502), root_numpy (#10424), rstudio (#10619), ScaFaCoS (#10537), Scythe (#10524), SDSL (#10642),
+    SHAP (#10379), SNPomatic (#10524), SoX (#10452), swissknife (#10037),) Taiyaki (#10573), TCLAP (#10598),
+    torchaudio (#10516), wtdbg2 (#10524)
 - added additional easyconfigs for various supported software packages, including:
-  - 4ti2 1.6.9, ADF 2019.303, ARAGORN 1.2.38, ATK 2.36.0, AUGUSTUS 3.3.3, Alpha 20200430, Anaconda3 2020.02.eb, Arb 2.16.0, Arlequin 3.5.2.2, ArviZ 0.7.0, AutoMap 1.0, Autoconf 2.69, Automake 1.16.1, Autotools 20180311, angsd 0.933, angsd 0.933, antiSMASH 5.1.2, archspec 0.1.0, artic ncov2019, at spi2, at spi2, attr 2.4.48, augur 7.0.2, BBMap 38.79, BCFtools 1.10.2, BRAKER 2.1.5, BWA 0.7.17, Bazel 2.0.0, Bio EUtilities, Biopython 1.75, Bison 3.6.1, Blosc 1.17.1, Bonito 0.1.4, Boost.Python 1.72.0, Boost.Python 1.72.0, Boost 1.72.0, Boost 1.72.0, Bowtie 1.2.3, Bowtie2 2.4.1, bcl2fastq2 2.20.0, binutils 2.34, bzip2 1.0.8, CITE seq, CLISP 2.49, CMake 3.16.4, CPLEX 12.10, CVXOPT 1.2.4, CaSpER 2.0, CoCoALib 0.99601, Coreutils 8.32, CubeLib 4.4.4, CubeWriter 4.4.3, cURL 7.69.1, cairo 1.16.0, cdbfasta 0.99, cdbfasta 0.99, cdbfasta 0.99, cddlib 0.94i, csvkit 1.0.5, ctffind 4.1.13, DB 18.1.32, DBus 1.13.12, DCMTK 3.6.5, DFTB+ 19.1, DFTB+ 19.1, DoubletFinder 2.0.3, Doxygen 1.8.17, dftd3 lib, double conversion, E ANTIC, ETE 3.1.1, EasyBuild 4.2.0.eb, Eigen 3.3.7, Exonerate 2.4.0, ecCodes 2.17.0, ecCodes 2.17.0, expat 2.2.9, FFTW 3.3.8, FFTW 3.3.8, FFmpeg 4.2.2, FIX 1.06.12, FLASH 1.2.11, FLINT 2.5.2, FSL 6.0.2, FSL 6.0.2, FastViromeExplorer 20180422, FriBidi 1.0.9, FusionCatcher 1.20, file 5.38, flex 2.6.4, fontconfig 2.13.92, foss 2020a.eb, freetype 2.10.1, GATK 4.1.5.0, GCC 10.1.0.eb, GCC 9.3.0.eb, GCCcore 10.1.0.eb, GDAL 3.0.4, GDAL 3.0.4, GDCM 3.0.5, GEOS 3.8.1, GEOS 3.8.1, GLPK 4.65, GLib 2.64.1, GMP 6.2.0, GObject Introspection, GROMACS 2020.1, GSL 2.6, GSL 2.6, GST plugins, GStreamer 1.16.2, GTK+ 3.24.17, Gdk Pixbuf, GeneMark ET, GenomeThreader 1.7.3, GffCompare 0.11.6, Ghostscript 9.52, GitPython 3.1.0, GlimmerHMM 3.0.4c, GlobalArrays 5.7.2, GlobalArrays 5.7.2, Guile 1.8.8, gap 4.11.0, gc 7.6.12, geopandas 0.7.0, gettext 0.20.1, gflags 2.2.2, glew 2.1.0, glew 2.1.0, glog 0.4.0, gmpy2 2.1.0b4, gmsh 4.5.6, gnuplot 5.2.8, goalign 0.3.2.eb, gompi 2020a.eb, gotree 0.4.0.eb, gperf 3.1, gpustat 0.6.0, gradunwarp 1.2.0, gradunwarp 1.2.0, gretl 2020a, gzip 1.10, HDDM 0.7.5, HDF EOS, HDF EOS5, HDF5 1.10.6, HDF5 1.10.6, HMMER2 2.3.2, HPL 2.3, HPL 2.3, HTSlib 1.10.2, HarfBuzz 2.6.4, HyPo 1.0.3, Hypre 2.18.2, Hypre 2.18.2, h5py 2.10.0, harmony 1.0.0, help2man 1.47.15, hwloc 2.2.0, hypothesis 5.6.0, ICU 66.1, IPython 7.13.0, IPython 7.13.0, IQ TREE, ImageMagick 7.0.10, iccifort 2020.1.217.eb, iimpi 2020a.eb, imkl 2020.1.217, impi 2019.7.217, intel 2020a.eb, intltool 0.51.0, JasPer 2.0.14, Julia 1.4.1, jbigkit 2.1, KMC 3.1.2rc1, Kraken2 2.0.9, kim api, kim api, king 2.2.4.eb, LAME 3.100, LAMMPS 3Mar2020, LLVM 9.0.1, LMDB 0.9.24, LMfit 1.0.0, LZO 2.10, LZO 2.10, LibTIFF 4.1.0, LittleCMS 2.9, Longshot 0.4.1, Lua 5.3.5, libGLU 9.0.1, libarchive 3.4.2, libcerf 1.13, libcroco 0.6.13, libdeflate 1.5, libdrm 2.4.100, libepoxy 1.5.4, libevent 2.1.11, libfabric 1.10.1, libfabric 1.9.1, libffcall 2.2, libffcall 2.2, libffi 3.3, libgd 2.3.0, libgeotiff 1.5.1, libgit2 1.0.0, libglvnd 1.2.0, libjpeg turbo, libmatheval 1.1.11, libpciaccess 0.16, libpng 1.6.37, libreadline 8.0, librsvg 2.48.4, libsigsegv 2.12, libsndfile 1.0.28, libsodium 1.0.18, libtool 2.4.6, libunistring 0.9.10, libunwind 1.3.1, libuv 1.37.0, libxc 4.3.4, libxml2 2.9.10, libyaml 0.2.2, lpsolve 5.5.2.5, lrslib 7.0a, lz4 1.9.2, M4 1.4.18, MAFFT 7.427, MDAnalysis 0.20.1, MDAnalysis 0.20.1, MDTraj 1.9.3, MEM 20191023, MEM 20191023, MEME 5.1.1, MEME 5.1.1, MESS 0.1.6, METIS 5.1.0, MPC 1.1.0, MPFR 4.0.2, MUMPS 5.2.1, MUMPS 5.2.1, MUSCLE 3.8.31, Mako 1.1.2, MariaDB connector, Mesa 20.0.2, Meson 0.53.2, MinCED 0.4.2, MinPath 1.4, MitoZ 2.3, MotionCor2 1.3.1, MultiQC 1.8, MultiQC 1.8, Multiwfn 3.6, matplotlib 3.2.1, matplotlib 3.2.1, mbuffer 20191016, metaerg 1.2.3, minimap2 2.17, minimap2 2.17, molmod 1.4.5, molmod 1.4.5, NASM 2.14.02, NCIPLOT 4.0, NGS Python, NGS 2.10.4, NLMpy 0.1.5, NLopt 2.6.1, NSPR 4.25, NSS 3.51, NTL 11.3.4, NWChem 7.0.0, Nextflow 20.04.1.eb, Ninja 1.10.0, Normaliz 3.7.4, nanopolish 0.13.1, nauty 2.6r12, nauty 2.7rc2, ncbi vdb, ncdf4 1.17, ncurses 6.2, netCDF C++4, netCDF Fortran, netCDF Fortran, netCDF 4.7.4, netCDF 4.7.4, netMHCIIpan 3.2, netcdf4 python, networkx 2.2, networkx 2.4, nifti2dicom 0.4.11, nodejs 12.16.1, ntCard 1.2.1, numactl 2.0.13, numexpr 2.6.5, numexpr 2.7.1, numexpr 2.7.1, OPARI2 2.0.5, OTF2 2.2, OpenBLAS 0.3.9, OpenEXR 2.4.1, OpenMPI 4.0.3, OpenPGM 5.2.122, OpenSSL 1.1.1e, openpyxl 3.0.3, PAPI 6.0.0, PCRE 8.44, PCRE2 10.34, PDT 3.25, PETSc 3.12.4, PETSc 3.12.4, PLINK 2.00a2.3_x86_64.eb, PLUMED 2.6.0, PLUMED 2.6.0, PMIx 3.1.5, PROJ 7.0.0, Pango 1.44.7, Perl 5.30.2, Pillow 7.0.0, ProtHint 2.4.0, ProtHint 2.4.0, PyMC3 3.8, PyTables 3.4.4, PyTables 3.6.1, PyTables 3.6.1, PyVCF 0.6.8, PyWavelets 1.1.1, PyYAML 5.3, Python 2.7.18, Python 3.8.2, pIRS 2.0.2, parallel 20200422, patchelf 0.10, pixman 0.38.4, pkg config, pkgconfig 1.5.1, popscle 0.1, protobuf python, protozero 1.6.8, pybind11 2.4.3, pysndfx 0.3.6, python Levenshtein, Qt5 5.14.1, QuantumESPRESSO 6.5, R bundle, R 3.6.3, R 4.0.0, RMBlast 2.9.0, RNA Bloom, Racon 1.4.13, Ray 0.8.4, Rust 1.42.0, Rust 1.42.0, Rust 1.42.0, rampart 1.2.0rc3, re2c 1.3, rickflow 0.7.0, rioxarray 0.0.24, root_numpy 4.8.0, rootpy 1.0.1, rstudio 1.2.5033, rstudio 1.2.5042, SAMtools 1.10, SCOTCH 6.0.9, SCOTCH 6.0.9, SCons 3.1.2, SDL2 2.0.10, SDSL 2.1.1, SHAP 0.35.0, SIONlib 1.7.6, SLATEC 4.1, SNPomatic 1.0, SQLite 3.31.1, SRA Toolkit, SRA Toolkit, SWIG 4.0.1, Salmon 1.2.0, ScaFaCoS 1.0.1, ScaFaCoS 1.0.1, ScaLAPACK 2.1.0, SciPy bundle, SciPy bundle, Score P, Scythe 0.994, SeqAn 2.4.0, Singular 4.1.2, SoX 14.4.2, Stacks 2.53, StringTie 2.1.1, SuiteSparse 5.7.1, SuiteSparse 5.7.1, Szip 2.1.1, scikit build, snappy 1.1.8, spaln 2.4.03, swissknife 1.80, sympy 1.5.1, TCLAP 1.2.2, Taiyaki 5.0.1, Taiyaki 5.0.1, Tcl 8.6.10, TensorFlow 2.2.0, Tk 8.6.10, Tkinter 3.8.2, tbb 2020.1, tbl2asn 20200302, torchaudio 0.5.0, torchaudio 0.5.0, torchtext 0.5.0, torchvision 0.5.0, UCX 1.8.0, UDUNITS 2.2.26, UMI tools, utf8proc 2.5.0, util linux, VCFtools 0.1.16, VCFtools 0.1.16, VTK 8.2.0, VTK 8.2.0, Voro++ 0.4.6, worker 1.6.12, wtdbg2 2.5, wxWidgets 3.1.3, X11 20200222, XZ 5.2.5, x264 20191217, x265 3.3, xorg macros, YAXT 0.6.2, YAXT 0.6.2, Yasm 1.3.0, yaff 1.6.0, ZeroMQ 4.3.2, zlib 1.2.11, zsh 5.8, zstd 1.4.4
-- added easyconfigs for new common toolchains: foss/2020a (#10483), intel/2020a (#10494)
+  - ADF 2019.303, BRAKER 2.1.5, Bazel 2.0.0, Bonito 0.1.4, Boost.Python 1.72.0, Bowtie2 2.4.1, CMake 3.16.4,
+    CPLEX 12.10, CVXOPT 1.2.4, Coreutils 8.32, cURL 7.69.1, DFTB+ 19.1, ecCodes 2.17.0, expat 2.2.9, FFmpeg 4.2.2,
+    FriBidi 1.0.9, GATK 4.1.5.0, GCC(core) 10.1.0, GDAL 3.0.4, GEOS 3.8.1, GLib 2.64.1, GMP 6.2.0, GROMACS 2020.1,
+    GTK+ 3.24.17, GenomeThreader 1.7.3, GffCompare 0.11.6, Ghostscript 9.52, GlimmerHMM 3.0.4c, GlobalArrays 5.7.2,
+    gmpy2 2.1.0b4, gmsh 4.5.6, gpustat 0.6.0, gradunwarp 1.2.0, HDF5 1.10.6, hwloc 2.2.0, hypothesis 5.6.0, ICU 66.1,
+    IPython 7.13.0, ImageMagick 7.0.10, Julia 1.4.1, KMC 3.1.2rc1, Kraken2 2.0.9, LMfit 1.0.0, Longshot 0.4.1,
+    libarchive 3.4.2, libffcall 2.2, libffi 3.3, libgd 2.3.0, libjpeg-turbo 2.0.4, librsvg 2.48.4, libsigsegv 2.12,
+    lrslib 7.0a, MEME 5.1.1, MPC 1.1.0, Mako 1.1.2, Mesa 20.0.2, Meson 0.53.2, MotionCor2 1.3.1, MultiQC 1.8,
+    matplotlib 3.2.1, NGS-Python-2.10.4, NGS 2.10.4, NSPR 4.25, NSS 3.51, NWChem 7.0.0, Nextflow 20.04.1,
+    Ninja 1.10.0, Normaliz 3.7.4, nanopolish 0.13.1, ncbi-vdb 2.10.4 netCDF 4.7.4, OpenBLAS 0.3.9, OpenEXR 2.4.1,
+    OpenMPI 4.0.3, OpenSSL 1.1.1e, openpyxl 3.0.3, PAPI 6.0.0, PCRE 8.44, PCRE2 10.34, PLUMED 2.6.0, PMIx 3.1.5,
+    PROJ 7.0.0, Perl 5.30.2, Pillow 7.0.0, PyYAML 5.3, Python 2.7.18 + 3.8.2, parallel 20200422, Qt5 5.14.1,
+    R-bundle-Bioconductor 3.11, R 3.6.3 + 4.0.0, RMBlast 2.9.0, Racon 1.4.13, Ray 0.8.4, Rust 1.42.0, re2c 1.3,
+    rioxarray 0.0.24, rootpy 1.0.1, rstudio 1.2.5042, SCons 3.1.2, SDL2 2.0.10, SIONlib 1.7.6, SQLite 3.31.1,
+    SRA-Toolkit 2.10.4, Salmon 1.2.0, ScaLAPACK 2.1.0, SciPy-bundle 2020.03, Stacks 2.53, StringTie 2.1.1,
+    SuiteSparse 5.7.1, snappy 1.1.8, spaln 2.4.03, sympy 1.5.1, Tcl 8.6.10, TensorFlow 2.2.0, Tk 8.6.10, Tkinter 3.8.2,
+    tbl2asn 20200302, torchvision 0.5.0, UCX 1.8.0, UMI-tools 1.0.1, utf8proc 2.5.0, util-linux 2.35, worker 1.6.12,
+    wxWidgets 3.1.3, X11 20200222, XZ 5.2.5, x264 20191217, x265 3.3, zsh 5.8, zstd 1.4.4 
 - minor enhancements, including:
-  - add mRMRe and dHSIC and sync easyconfig in fosscuda for R v3.6.2 (#10359)
-  - add Mozilla::CA, Test::RequiresInternet and LWP::Protocol::https extensions to Perl 5.30.x (#10412)
-  - update extensions in Python 3.8.2 easyconfig (#10456)
+  - add additional extensions for recent versions of R (#10359, #10585, #10586, #10621) and R-bundle-Bioconductor (#10585, #10596, #10621)
+  - add additional extensions for recent versions of Perl (#10412, #10546, #10623)
   - include LLVM linker in Clang 7.0.1 on GCC 7.3.0-2.30(#10458)
   - include static lib and header in nimimap2 easyconfigs for foss-2018b and GCC-8.2.0* (#10464)
-  - add UCX 1.8.0 as dep for OpenMPI 4.0.3 using in foss/2020a (+ easyconfig for libfabric 1.9.1) (#10492)
-  - add MCE::Mutex extension to Perl 5.28.1 + 5.30.x (#10546)
-  - add additional extensions to R 3.6.2 + R-bundle-Bioconductor 3.10 easyconfigs (#10585)
-  - add additional extensions to R 3.6.3 & R 4.0.0 extensions (#10586)
-  - add diffcyt extension to R-bundle-Bioconductor 3.10 (#10596)
   - add alternate checksum for EMBOSS (#10607)
-  - update ALL, pRolocdata and geneLenDataBase extensions in Bioconductor/3.11 (#10614)
-  - add extensions to R 4.0.0 and Bioconductor 3.11 easyconfigs (#10621)
-  - add additional extensions to Perl-5.30.2 easyconfig (#10623)
 - various bug fixes, including:
   - fix incorrect checksums for Amber patches (#8870)
   - add patches to fix installation of R 3.6.2 on POWER (#9830)
-  - add system dependencies on ibverbs and remove UCX dependency in libfabric v1.9.1 (#10281)
   - add missing build dep. pkg-config in GObject-Introspection 1.63.1 w/ Python 3.7.4 easyconfig (#10380)
-  - check sdist with different python versions (#10388)
-  - add Perl as a build dependency for Autoconf/Automake on GCCcore/8.3.0(#10408)
-  - add patch for AutoMap to avoid that it to create a log file in installation directory (#10414)
+  - add Perl as a build dependency for recent Autoconf/Automake easyconfigs (#10408, #10426)
   - fix source_urls in ICU easyconfigs (#10417)
   - disable USER-INTEL package in LAMMPS easyconfigs using intel/2019b, since it results in an installation that produces incorrect results (#10418)
   - fix undefined reference to 'qfloat16::mantissatable' in Qt5-5.13.1-GCCcore-8.3.0 (#10425)
-  - add Perl build dep for Autoconf/Automake using GCCcore/7.3.0 and GCCcore/8.2.0 toolchains (#10426)
-  - avoid double - in versionsuffix of torchtext easyconfig (#10472)
-  - fix Mako easyconfigs using a */2018* toolchain (#10480)
-  - move builddependencies to dependencies in OTF2 and Score-P easyconfigs(#10496)
-  - add patch for UCX 1.8.0 to fix unresolved symbol (#10499)
+  - get rid of double '-' in versionsuffix of torchtext easyconfig (#10472)
+  - fix broken Mako easyconfigs (#10480, #10627)
+  - move builddependencies to dependencies in OTF2 and Score-P easyconfigs (#10496)
   - add missing cURL dep for LAMMPS (#10527)
-  - fix R 3.6.3 on Power9 (#10531)
-  - add Python 2 builddep for OpenPGM (#10539)
-  - add ibverbs dependencies via constants to PyTorch 1.4.0 easyconfigs (#10540)
+  - add Python 2 build dependency for OpenPGM (#10539)
+  - use OS_PKG_IBVERBS_DEV constant for OS dependency in PyTorch 1.4.0 easyconfigs (#10540)
   - add missing Bison build dep in Graphviz easyconfigs (#10541)
   - use https in homepage for Mathematica 12.0.0 + clean up sanity check commands (now done by easyblock) (#10559)
   - add missing PyVCF dependency for BAMSurgeon (#10564)
   - remove FFTW dependencies from LAMMPS easyconfigs, no longer needed (MKL can be used too now) (#10565)
-  - fix building [foss/2019b] ITK v5.0.1 (locale & libjpeg) (#10592)
-  - fix missing const qualifiers for ncurses (#10606)
+  - fix ITK v5.0.1 easyconfig w.r.t. locale and location of libjpeg-turbo library (#10592)
+  - add patch to fix missing const qualifiers for ncurses (#10606)
   - fix OS dependency for rstudio for Debian-based systems (#10608)
-  - fix Rmath paths in FastQTL/2.184 (#10612)
+  - fix Rmath paths in easyconfig for FastQTL v2.184 (#10612)
   - add symlink for Arlequin commands + fix sanity check commands (#10620)
-  - add patch for h5py 2.10.0 with 2020a toolchains to avoid MPI_Init at import (#10626)
-  - fix Mako easyconfigs using a 2016 & 2017 toolchain (#10627)
-  - fix binutils for Fedora 32 / GCC 10 (#10633)
-  - stop using old hpcugent URL for cloning framework/easyblocks repos in CI (#10635)
-  - replace /path/to with actual installation prefix in FuSeq scripts (#10640)
+  - fix recent binutils easyconfigs usign system toolchain for Fedora 32 / GCC 10 (#10633)
+  - replace '/path/to' with actual installation prefix in FuSeq scripts (#10640)
 - other changes:
+  - check sdist with different Python versions in CI (#10388)
   - use Bison 3.3.2 as build dep for flex 2.6.4 (#10403)
-  - remove patch leftovers from AutoMap v1.0 (#10419)
   - mention http:// Pfam website rather than ftp:// in load message of BiG-SCAPE easyconfig (#10439)
   - archive old Singularity configs (#10591)
-  - don't use harmful patch for h5py 2.10.0 with foss/2020a + pull out h5py 2.10.0 easyconfig using intel/2020a (#10630)
+    - Singularity is not well suited to install via EasyBuild because it requires admin privileges to enable setuid
+  - stop using old hpcugent URL for cloning framework/easyblocks repos in CI (#10635)
   - use SYSTEM constant for toolchain in easyconfigs already use 'system' toolchain (#10638)
 
 
